[package]
name = "shell"
version = "0.1.0"
authors = ["miky rola"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                
bytes = "1.3.0"                                 
thiserror = "1.0.38"                             
dirs = "5.0"
hostname = "0.3"
which = "4.4"
chrono = "0.4"